Added descriptions of the templates

--- a/CNN/blank_cnn.ipynb
+++ b/CNN/blank_cnn.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# To hold the code of a blank transformer model"
+    "# To hold the python code for a blank CNN model"
    ]
   }
  ],
