changes to transformer

--- a/MusicGen/blank_transformer.ipynb
+++ b/MusicGen/blank_transformer.ipynb
@@ -65,28 +65,23 @@
     "        # batch_size: int\n",
     "        # epochs: int\n",
     "        # lr: float\n",
-    "        loss_fn = nn.MSELoss()\n",
+    "        #loss_fn = nn.MSELoss()\n",
+    "        loss_fn = nn.CosineEmbeddingLoss\n",
     "        optimizer = torch.optim.Adam(self.parameters(), lr=lr)\n",
     "        train_loader = torch.utils.data.DataLoader(dataset, batch_size=batch_size, shuffle=True)\n",
     "\n",
     "        for epoch in range(epochs):\n",
     "            for i, (audio, angle) in enumerate(train_loader):\n",
-    "\n",
-    "                optimizer.zero_grad()\n",
-    "\n",
-    "            all_codes = []\n",
-    "            all_target_codes = []\n",
-    "            texts = []\n",
-    "            for left_target, right_target, label, original in zip(left_targets, right_targets, labels, originals):\n",
     "                optimizer.zero_grad()\n",
     "                output = self(audio, angle)\n",
     "                loss = loss_fn(output, audio)\n",
     "                loss.backward()\n",
     "                optimizer.step()\n",
     "                print(f\"Epoch {epoch}, batch {i}, loss {loss.item()}\")\n",
+    "\n",
     "            torch.save(self.state_dict(), f\"model_{epoch}.pth\")\n",
     "            print(f\"Saved model_{epoch}.pth\")\n",
-    "        \n",
+    "\n",
     "        print(\"Finished Training\")"
    ]
   },
